--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <!-- favourite Items -->
       <section id="favorite-section">
-        <h2 >❤️My Favorite Recipes</h2>
+        <h2 id="all-favourite-title">❤️My Favorite Recipes</h2>
         <div id="favorites-grid"></div>
       </section>
 
